--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ button{
 /* MAIN */
 main {
     height: calc(100% - 120px);
-    background-color: orange;
+    background-color: black;
     width: 90%;
     margin: auto;
     overflow-y: auto;
@@ -40,19 +40,34 @@ footer {
 }
 .users{
     flex-wrap: wrap;
-    padding: 10px;
+    
 }
 
 .user{
-    width: calc(100% / 7);
+    width: calc(100% / 7 - 10px);
+    margin: 5px;
     
 }
 .row{
     display: flex;
+    
+    
 }
 .user-photo img{
     display: block;
     width: 100%;
     
+}
+.user-photo{
+    position: relative;
+}
+
+.nome-user{
+    position: absolute;
+    top: 1;
+    bottom: 0;
+    right: 1;
+    background-color: grey;
+    color: white;
 }
 
